<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/errorTitle"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/generic_error_message"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/generic_error_message"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/errorTitle"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_margin="24dp"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:hint="@string/search_for_repository"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        app:layout_constraintVertical_bias="0.0"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repositoriesRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEditText"
            tools:itemCount="2"
            tools:listitem="@layout/item_repositories_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>